feat: Implementar arquitectura base del sistema BioGuard
- Comunicación cliente-servidor con protocolo de longitud fija
- Servidor TCP con pool de hilos para concurrencia
- Cliente con lectura de archivos FASTA
- Validación de datos de pacientes
- Manejo de excepciones personalizadas
- Persistencia de virus en formato FASTA
- Pruebas de conexión exitosas con múltiples mensajes